# rpg-tracker

./: .gitignore  Makefile  README.md  architecture.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: a0c3247c5b68_initial_schema.py
backend/src/rpg_tracker/: config.py  main.py
backend/src/rpg_tracker/api/: deps.py  exception_handlers.py  mappers.py
backend/src/rpg_tracker/api/routers/: __init__.py  campaigns.py  dashboard.py  domains.py  pomodoro.py  quests.py  roadmap.py  skills.py
backend/src/rpg_tracker/api/schemas/: __init__.py
backend/src/rpg_tracker/application/: campaign_service.py  pomodoro_service.py  tracker_service.py
backend/src/rpg_tracker/domain/: campaign.py  enums.py  exceptions.py  pomodoro.py  quest_flow.py  xp_engine.py
backend/src/rpg_tracker/infrastructure/: db.py  models.py  repositories.py
backend/src/rpg_tracker/seed/: data.sql  load.py
backend/tests/: test_api.py  test_campaign.py  test_pomodoro.py  test_quest_flow.py  test_xp_engine.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/game-shell/: game-ambient.css  game-ambient.tsx  game-shell.css  game-shell.tsx  game-ticker.css  game-ticker.tsx  page-stage.css  page-stage.tsx  player-session-provider.tsx  quest-nudge.css  (+1 more)
frontend/src/styles/: atmosphere.css  crt.css  diablo-ui.css  global.css  layout.css  motion.css  pixel.css  responsive.css  theme-light.css  tokens.css  typography.css
scripts/: dev-api.sh  find-free-port.sh
(+66 files in other folders)
